--- a/data_etl.ipynb
+++ b/data_etl.ipynb
@@ -8540,7 +8540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_connection_string = \"postgres:Speaker34j!@localhost:5432/college_football\"\n",
+    "rds_connection_string = \"postgres:@localhost:5432/college_football\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
